fixing some erro codes
